--- a/app/src/main/res/layout/fragment_order_history.xml
+++ b/app/src/main/res/layout/fragment_order_history.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/home_background"
-    tools:context=".fragments.product.ProductListFragment">
+    tools:context=".fragments.order.OrderHistoryFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/noProductLayout"
