--- a/app/src/main/res/layout/fragment_order_history_details.xml
+++ b/app/src/main/res/layout/fragment_order_history_details.xml
@@ -2,37 +2,26 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".fragments.home.HomeFragment">
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="5dp"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+    android:layout_height="match_parent"
+    android:background="@color/home_background"
+    tools:context=".fragments.order.OrderHistoryDetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/orderIdLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/orderListRecyclerview"
+        android:layout_margin="@dimen/_10sdp">
 
         <TextView
             android:id="@+id/orderIdLabel"
             style="@style/TextViewPinkBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_8sdp"
             android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
             android:text="Order ID"
@@ -42,14 +31,13 @@
 
         <TextView
             android:id="@+id/orderId"
-            style="@style/TextViewPink"
+            style="@style/TextViewPinkBold"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/orderIdLabel"
+            app:layout_constraintStart_toStartOf="@+id/date"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -57,12 +45,9 @@
             style="@style/BoldTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
-            android:text="Date"
-            android:visibility="gone"
-            android:textColor="@color/black"
+            android:text="Delivered on"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/orderIdLabel" />
@@ -72,9 +57,10 @@
             style="@style/NormalTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_8sdp"
             android:padding="@dimen/_2sdp"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/orderIdLabel"
+            app:layout_constraintStart_toEndOf="@id/dateLabel"
             app:layout_constraintTop_toBottomOf="@id/orderIdLabel" />
 
         <TextView
@@ -99,7 +85,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/_2sdp"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/orderIdLabel"
+            app:layout_constraintStart_toStartOf="@+id/date"
             app:layout_constraintTop_toBottomOf="@id/date" />
 
         <TextView
@@ -107,7 +93,6 @@
             style="@style/BoldTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_8sdp"
             android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
             android:text="Payment"
@@ -120,33 +105,59 @@
             style="@style/NormalTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
             android:textSize="14sp"
-            app:layout_constraintStart_toEndOf="@+id/paymentLabel"
+            app:layout_constraintStart_toStartOf="@+id/date"
             app:layout_constraintTop_toBottomOf="@id/time" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/amountLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/orderListRecyclerview"
+        android:layout_margin="@dimen/_10sdp"
+        >
+
+        <TextView
+            android:id="@+id/amountLabel"
+            style="@style/BoldTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_2sdp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp"
+            android:text="Item Total"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/amount"
             style="@style/BoldTextView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:gravity="center|right"
-            android:paddingEnd="@dimen/_16sdp"
             android:paddingLeft="@dimen/_2sdp"
             android:paddingRight="@dimen/_2sdp"
+            android:gravity="center|right"
+            android:paddingEnd="@dimen/_16sdp"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@id/time"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/orderIdLabel"
+            app:layout_constraintStart_toEndOf="@id/amountLabel"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/orderListRecyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/amountLayout"
+        app:layout_constraintTop_toBottomOf="@id/orderIdLayout" />
+</androidx.constraintlayout.widget.ConstraintLayout>
