--- a/app/src/main/res/layout/fragment_otp.xml
+++ b/app/src/main/res/layout/fragment_otp.xml
@@ -100,7 +100,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/resend_otp"
+            android:visibility="invisible"
             android:textSize="16sp"
+            android:textColor="@color/forgot_password_color"
+            android:layout_marginTop="@dimen/_10sdp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/otp_input_layout"
+            />
+
+        <TextView
+            android:id="@+id/timer"
+            style="@style/NormalTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:visibility="visible"
             android:textColor="@color/forgot_password_color"
             android:layout_marginTop="@dimen/_10sdp"
             app:layout_constraintLeft_toLeftOf="parent"
