--- a/app/src/main/res/layout/fragment_order_history_details.xml
+++ b/app/src/main/res/layout/fragment_order_history_details.xml
@@ -11,11 +11,11 @@
         android:id="@+id/orderIdLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@id/orderListRecyclerview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/orderListRecyclerview"
-        android:layout_margin="@dimen/_10sdp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/orderIdLabel"
@@ -72,9 +72,9 @@
             android:layout_marginRight="6dp"
             android:padding="@dimen/_2sdp"
             android:text="Time"
-            android:visibility="gone"
             android:textColor="@color/black"
             android:textSize="14sp"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dateLabel" />
 
@@ -113,14 +113,55 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/amountLayout"
-        android:layout_width="match_parent"
+        android:id="@+id/deliveryLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        app:layout_constraintBottom_toTopOf="@id/amountLayout"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:id="@+id/deliveryLabel"
+            style="@style/NormalTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:text="Delivery Charges"
+            android:textSize="14sp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/deliveryCharge"
+            style="@style/NormalTextView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center|right"
+            android:paddingEnd="@dimen/_16sdp"
+            android:paddingLeft="@dimen/_2sdp"
+            android:paddingRight="@dimen/_2sdp"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/deliveryLabel"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/deliveryLabel"
+            app:layout_constraintTop_toTopOf="@id/deliveryLabel" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/amountLayout"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_5sdp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/orderListRecyclerview"
-        android:layout_margin="@dimen/_10sdp"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <TextView
             android:id="@+id/amountLabel"
@@ -128,9 +169,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/_2sdp"
+            android:text="Item Total"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            android:text="Item Total"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -139,17 +180,16 @@
             style="@style/BoldTextView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:paddingLeft="@dimen/_2sdp"
-            android:paddingRight="@dimen/_2sdp"
             android:gravity="center|right"
             android:paddingEnd="@dimen/_16sdp"
+            android:paddingLeft="@dimen/_2sdp"
+            android:paddingRight="@dimen/_2sdp"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@id/amountLabel"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/amountLabel"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -158,6 +198,6 @@
         android:id="@+id/orderListRecyclerview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/amountLayout"
+        app:layout_constraintBottom_toTopOf="@id/deliveryLayout"
         app:layout_constraintTop_toBottomOf="@id/orderIdLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
